frontend/test/should_fail/basic_022.grg
rule r {
  x:Node;
  -x->;
  modify { }
}
